# stellar-campus-rewards

./: README.md
backend/: package-lock.json  package.json  server.js
contracts/counter/: Cargo.toml
contracts/counter/src/: lib.rs
frontend/: NewFile  index.html  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/components/: AchievementsGrid.tsx  ConnectButton.module.css  ConnectButton.tsx  CounterContract.module.css  CounterContract.tsx  DAOSection.tsx  Leaderboard.tsx  NotificationCenter.tsx  ReputationPanel.tsx  WalletInfo.module.css  WalletInfo.tsx
frontend/src/hooks/: useAchievements.js  useDAO.js  useFreighter.ts  useNotifications.js  useReputation.js
frontend/src/lib/: contract.ts  stellar.ts
screenshots/: README.md
